--- a/src/common/widgets/header/header.component.html
+++ b/src/common/widgets/header/header.component.html
@@ -1,2 +1,8 @@
 <ng-content></ng-content>
+
+<a [routerLink]="'/games'">
+	<img src="/assets/svg/home.svg" width="24" height="24" alt="games">
+</a>
+
+<button (click)="backClicked()">Назад</button>
 <p>header works!</p>
